--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
     "cibm": "./bin/cibuildmessage"
   },
   "devDependencies": {
+    "@types/request": "^2.48.8",
     "typescript": "^4.8.4"
+  },
+  "dependencies": {
+    "crypto": "^1.0.1",
+    "fs": "^0.0.1-security",
+    "request": "^2.88.2"
   }
 }
